--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,6 +8,7 @@
     <string name="navigation_draw_close">Close navigation drawer</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="avatar">Avatar</string>
     <string name="login_to_yo">Login to your account</string>
     <string name="signupyo">Create to your account</string>
     <string name="email_title">Email Address</string>
