--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,7 @@
     <string name="signupyo">Create to your account</string>
     <string name="email_title">Email Address</string>
     <string name="hint_email">Enter email</string>
+    <string name="default_web_client_id">192141282741-to83op9qni5bhmp42rt6q6n3ib6nq64n.apps.googleusercontent.com</string>
     <string name="pass_title">Password</string>
     <string name="hint_pass">Enter password</string>
     <string name="create_an_a">Login</string>
